# Morphac

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  _MANIFEST.in  _setup.py  _version.py  build.sh  morphac_config.yaml  pytest.ini  requirements.txt
morphac/: CMakeLists.txt  __init__.py  _run_examples.py  _run_tests.py
morphac/common/aliases/include/: eigen_aliases.h  numeric_aliases.h
morphac/common/error_handling/include/: error_macros.h
morphac/constants/: CMakeLists.txt
morphac/constants/binding/: CMakeLists.txt  __init__.py  constants.cc
morphac/constants/binding/include/: environment_constants_binding.h  map_constants_binding.h  mechanics_constants_binding.h
morphac/constants/binding/modules/: CMakeLists.txt
morphac/constants/binding/src/: environment_constants_binding.cc  map_constants_binding.cc  mechanics_constants_binding.cc
morphac/constants/include/: environment_constants.h  map_constants.h  mechanics_constants.h
morphac/constants/python/: colors.py
morphac/constants/python/test/: environment_constants_test.py  map_constants_test.py  mechanics_constants_test.py
morphac/constants/src/: environment_constants.cc  map_constants.cc  mechanics_constants.cc
morphac/constants/test/: environment_constants.cc  environment_constants_test.cc  map_constants_test.cc  mechanics_constants_test.cc
morphac/constructs/: CMakeLists.txt
morphac/constructs/binding/: CMakeLists.txt  __init__.py  constructs.cc
morphac/constructs/binding/include/: control_input_binding.h  coordinate2D_binding.h  coordinate_binding.h  input_binding.h  pose_binding.h  state_binding.h  trajectory_binding.h  velocity_binding.h
morphac/constructs/binding/src/: control_input_binding.cc  coordinate2D_binding.cc  coordinate_binding.cc  input_binding.cc  pose_binding.cc  state_binding.cc  trajectory_binding.cc  velocity_binding.cc
morphac/constructs/include/: control_input.h  coordinate.h  coordinate2D.h  input.h  pose.h  state.h  trajectory.h  velocity.h
morphac/constructs/python/test/: control_input_test.py  coordinate2D_test.py  coordinate_test.py  input_test.py  pose_test.py  state_test.py  test_pose.py  trajectory_test.py  velocity_test.py
morphac/constructs/src/: control_input.cc  coordinate.cc  coordinate2D.cc  input.cc  pose.cc  state.cc  trajectory.cc  velocity.cc
morphac/constructs/test/: control_input_test.cc  coordinate2D_test.cc  coordinate_test.cc  input_test.cc  pose_test.cc  state_test.cc  trajectory_test.cc  velocity_test.cc
morphac/controllers/: CMakeLists.txt
morphac/controllers/base/: CMakeLists.txt
morphac/controllers/base/binding/: CMakeLists.txt  __init__.py  controllers.cc  controllers_base.cc
morphac/controllers/base/include/: controller.h
morphac/controllers/base/src/: controller.cc
morphac/controllers/base/test/: controller_test.cc
morphac/controllers/basic/: CMakeLists.txt
morphac/controllers/binding/: CMakeLists.txt  controllers.cc
morphac/controllers/include/: controller.h
morphac/controllers/src/: controller.cc
morphac/controllers/test/: controller_test.cc
morphac/environment/: CMakeLists.txt
morphac/environment/binding/: CMakeLists.txt  __init__.py  environment.cc
morphac/environment/include/: map.h
morphac/environment/python/: _map.py
morphac/environment/src/: map.cc
morphac/environment/test/: map_test.cc
morphac/environments/: CMakeLists.txt
morphac/environments/binding/: CMakeLists.txt  __init__.py  environments.cc
morphac/environments/include/: environment.h  environment2D.h
morphac/environments/src/: environment.cc  environment2D.cc
morphac/environments/test/: environment2D_test.cc  environment_test.cc
morphac/examples/: CMakeLists.txt
morphac/examples/python/: ackermann_steering.py  constant_controller.py  constant_controller_example.py  constant_controller_simulation.py
morphac/math/: CMakeLists.txt
morphac/math/geometry/: CMakeLists.txt
morphac/math/integration/: CMakeLists.txt
morphac/math/numeric/: CMakeLists.txt
morphac/math/transforms/: CMakeLists.txt
morphac/math/utility/: CMakeLists.txt
morphac/math/utils/: CMakeLists.txt
morphac/mechanics/: CMakeLists.txt
morphac/mechanics/models/: CMakeLists.txt
morphac/planners/: CMakeLists.txt
morphac/planners/base/: CMakeLists.txt
morphac/planners/include/: planner.h
morphac/planners/src/: planner.cc
morphac/planners/test/: planner_test.cc
morphac/robot/: CMakeLists.txt
morphac/robot/blueprint/: CMakeLists.txt
morphac/robot/driver/: CMakeLists.txt
morphac/robot/pilot/: CMakeLists.txt
morphac/simulation/: CMakeLists.txt
morphac/simulation/binding/: CMakeLists.txt  __init__.py  simulation.cc
morphac/simulation/include/: playground.h  playground_spec.h  playground_state.h
morphac/simulation/playground/: CMakeLists.txt
morphac/simulation/src/: playground.cc  playground_spec.cc  playground_state.cc
morphac/simulation/test/: playground_spec_test.cc  playground_state_test.cc  playground_test.cc
morphac/utils/: CMakeLists.txt
morphac/utils/binding/: CMakeLists.txt  __init__.py  utils.cc
morphac/utils/include/: angle_utils.h  geometry_utils.h  integrator_utils.h  numeric_utils.h  points_utils.h  transforms_utils.h
morphac/utils/python/: canvas_utils.py  cv2_utils.py  decorator_utils.py  mechanics_utils.py  models_utils.py  pytest_utils.py  python_utils.py
morphac/utils/src/: angle_utils.cc  geometry_utils.cc  integrator_utils.cc  numeric_utils.cc  points_utils.cc  transforms_utils.cc
morphac/utils/test/: angle_utils_test.cc  geometry_utils_test.cc  integrator_utils_test.cc  numeric_utils_test.cc  points_utils_test.cc  transforms_utils_test.cc
morphac/visualization/: CMakeLists.txt
morphac/visualization/python/: colors.py  map_visualization.py  playground_visualization.py  playground_visualizer.py  robot_visualization.py
src/: CMakeLists.txt  CMakeLists.txt.in
src/morphac/: CMakeLists.txt
src/morphac/constructs/: CMakeLists.txt
src/morphac/environments/: CMakeLists.txt
src/morphac/mechanics/: CMakeLists.txt
src/morphac/robot/: CMakeLists.txt
(+317 files in other folders)
